manifests/accounting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounting-service
  namespace: reddog
  labels:
    app: accounting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounting-service
  template:
    metadata:
      labels:
        app: accounting-service
    spec:
      containers:
        - name: accounting-service
          image: ghcr.io/azure/reddog-demo/reddog-java-accounting-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8707     
          resources:
            requests:
              memory: "128Mi"
              cpu: 2
            limits:
              memory: "250Mi"
              cpu: 4
---
apiVersion: v1
kind: Service
metadata:
  name: accounting-service
  namespace: reddog
  labels:
    name: accounting-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8707
    targetPort: 8707
  selector:
    app: accounting-service
