manifests/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: reddog
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: ghcr.io/azure/reddog-demo/reddog-java-order-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8702
          imagePullPolicy: Always            
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: reddog
  labels:
    name: order-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8702
    targetPort: 8702
  selector:
    app: order-service
