manifests/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: reddog
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: ghcr.io/azure/reddog-demo/reddog-ui-nextjs:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: reddog  
  labels:
    name: ui
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: ui
