manifests/virtual-customers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtual-customers
  namespace: reddog
  labels:
    app: virtual-customers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: virtual-customers
  template:
    metadata:
      labels:
        app: virtual-customers
    spec:
      containers:
        - name: virtual-customers
          image: ghcr.io/azure/reddog-demo/reddog-java-virtual-customers:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8701
---
apiVersion: v1
kind: Service
metadata:
  name: virtual-customers
  namespace: reddog
  labels:
    name: virtual-customers
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8701
    targetPort: 8701
  selector:
    app: virtual-customers
