manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reddog-ingress
  namespace: reddog
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
  ingressClassName: nginx
